# libcsvg

./: .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  LICENSE  Makefile.am  README.md  configure.ac
src/: Makefile.am  csvg-mem.c  csvg-mem.h  csvg-parser.c  csvg-parser.h  csvg-private.h  csvg.c
src/csvg/: csvg.h
tests/: .gitignore  Makefile.am  test-csvg-mem.c  test-csvg.c  test-parser.c
